--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-torch
+torch==2.0.0+cu118
+torchvision==0.15.1+cu118
+# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+matplotlib
+numpy
+pandas
+tqdm
+scikit-learn
