Most of the names of the files have been changed.
Incorporated method to load the dataset from csv and json files, simply a copy and paste of Victor program.

Currently having the error:TypeError: Tuple[t0, t1, ...]: each t must be a type. Got {'UNKNOWN': 'unknown', '0_electron_1': '0_1', '1_electron_1': '1_1', '2_electrons_1': '2_1', '3_elec.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,10 @@ scikit-image
 scikit-spatial
 os
 tkinter
-PIL
+pillow~=9.0
+configargparse~=1.5
+shapely==1.7.1
+seaborn
+imageio
+pyyaml~=6.0
+codetiming
