Adjusted the labels to be a list of lines and not booleans. Added method in run file to lead patches.
Getting error: FileNotFoundError: [Errno 2] No such file or directory: 'out\\tmp\\img\\diagram_1779Dev2-20161127_443.png'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.idea/csv-editor.xml
+.idea/deployment.xml
+
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,python,venv
 
