--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,10 @@ scikit-spatial
 scipy
 seaborn
 shapely==1.7.1
-tkinter
 tqdm
 torch==2.0.0+cu118
 torchvision==0.15.1+cu118
+
+# If there is a problem with the installation of torch 2.0.0+cu118 and torchvision 0.15.1+cu118 ;
+# install manually with this link https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp39-cp39-win_amd64.whl (torch)
+#https://download.pytorch.org/whl/cu118/torchvision-0.15.1%2Bcu118-cp39-cp39-win_amd64.whl (torchvision)
