--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
 # pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
-codetiming
+codetiming~=1.4.0
 configargparse~=1.5
-opencv-python
-imageio
-matplotlib
-numpy
+opencv-python~=4.8.0.74
+imageio~=2.28.0
+matplotlib~=3.7.1
+numpy~=1.24.3
 pillow~=9.0
 pyyaml~=6.0
+openpyxl
 os
-scikit-learn
-scikit-image
+scikit-learn~=1.2.2
+scikit-image~=0.20.0
 scikit-spatial
-scipy
-seaborn
+scipy~=1.9.1
+seaborn~=0.12.2
 shapely==1.7.1
-tqdm
+tqdm~=4.65.0
 tkinter
 torch==2.0.0+cu118
 torchvision==0.15.1+cu118
@@ -22,3 +23,5 @@ torchvision==0.15.1+cu118
 # If there is a problem with the installation of torch 2.0.0+cu118 and torchvision 0.15.1+cu118 ;
 # install manually with this link https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp39-cp39-win_amd64.whl (torch)
 #https://download.pytorch.org/whl/cu118/torchvision-0.15.1%2Bcu118-cp39-cp39-win_amd64.whl (torchvision)
+future~=0.18.3
+pandas~=2.0.1
